# ubcma

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  .tmp_cli_review.csv  .tmp_cli_review_full.csv  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  E156-PROTOCOL.md  Makefile  README.md  SECURITY.md  index.html  push.sh  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml
docs/superpowers/plans/: 2026-03-24-ubcma-three-phase-plan.md  2026-03-25-ubcma-v03-improvements.md
docs/superpowers/specs/: 2026-03-24-ubcma-three-phase-design.md  2026-03-24-ubcma-v03-improvements-design.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
e156-submission/assets/: dashboard.html
examples/: bartos_2022_anderson.csv  quickstart.py  simulated.csv  toy_studies.csv  verde_2021_aspirin.csv
scripts/: run_demo.ps1
src/ubcma/: __init__.py  bayesian.py  cli.py  comparators.py  data.py  diagnostics.py  inference.py  model.py  simulation.py  simulation_study.py
src/ubcma/__pycache__/: model.cpython-313.pyc.1994538480048
tests/: __init__.py  test_api.py  test_bayesian.py  test_comparators.py  test_diagnostics.py  test_inference.py  test_model.py  test_portability_contracts.py  test_simulation_study.py  test_smoke.py  test_validation.py
