[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubcma"
version = "0.1.0"
description = "Unified Bias-Calibrated Meta-Analysis prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
]

[project.optional-dependencies]
bayes = ["pymc>=5.10", "arviz>=0.17"]
study = ["tqdm>=4.60"]

[project.scripts]
ubcma = "ubcma.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
